fixed blue highlighting on mobile touch

--- a/css/style.css
+++ b/css/style.css
@@ -225,7 +225,15 @@ ol {
 }
 
 .choice {
-  height: 100px;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.choice:hover {
   cursor: pointer;
 }
 
